# journey

./: README.md  index.html  pyproject.toml  txt_to_markdown_converter_requirements.md
pyquality/: __init__.py  cli.py
tests/: test_pyquality.py
txt_to_markdown_demo/: converter.py  sample_input.txt
